@@ -358,7 +358,7 @@ static void event_ffmpeg_newfile(struct context *cnt, int type ATTRIBUTE_UNUSED,
 		      ffmpeg_open((char *)cnt->conf.ffmpeg_video_codec, cnt->newfilename, y, u, v,
 		                  cnt->imgs.width, cnt->imgs.height, fps, cnt->conf.ffmpeg_bps,
 		                  cnt->conf.ffmpeg_vbr)) == NULL) {
-			motion_log(LOG_ERR, 1, "ffopen_open error creating file [%s]",cnt->newfilename);
+			motion_log(LOG_ERR, 1, "ffopen_open error creating (new) file [%s]",cnt->newfilename);
 			cnt->finish=1;
 			return;
 		}
@@ -390,7 +390,7 @@ static void event_ffmpeg_newfile(struct context *cnt, int type ATTRIBUTE_UNUSED,
 		      ffmpeg_open((char *)cnt->conf.ffmpeg_video_codec, cnt->motionfilename, y, u, v,
 		                  cnt->imgs.width, cnt->imgs.height, fps, cnt->conf.ffmpeg_bps,
 		                  cnt->conf.ffmpeg_vbr)) == NULL){
-			motion_log(LOG_ERR, 1, "ffopen_open error creating file [%s]", cnt->motionfilename);
+			motion_log(LOG_ERR, 1, "ffopen_open error creating (motion) file [%s]", cnt->motionfilename);
 			cnt->finish=1;
 			return;
 		}
@@ -439,7 +439,7 @@ static void event_ffmpeg_timelapse(struct context *cnt,
 		      ffmpeg_open((char *)TIMELAPSE_CODEC, cnt->timelapsefilename, y, u, v,
 		                  cnt->imgs.width, cnt->imgs.height, 24, cnt->conf.ffmpeg_bps,
 		                  cnt->conf.ffmpeg_vbr)) == NULL) {
-			motion_log(LOG_ERR, 1, "ffopen_open error creating file [%s]", cnt->timelapsefilename);
+			motion_log(LOG_ERR, 1, "ffopen_open error creating (timelapse) file [%s]", cnt->timelapsefilename);
 			cnt->finish=1;
 			return;
 		}
